# cppcourse-brunel

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  doxygen
CMake/: CMakeCache.txt  Makefile  cmake_install.cmake  test
dox/html/: Constants_8h_source.html  Network_8h_source.html  Neuron_8h_source.html  Simulation_8h_source.html  annotated.html  classNetwork-members.html  classNetwork.html  classNeuron-members.html  classNeuron.html  classSimulation-members.html  classSimulation.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html
dox/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js
dox/latex/: annotated.tex  classNetwork.tex  classNeuron.tex  classSimulation.tex  refman.tex
res/: Graph.ipynb  Untitled.ipynb  potentials.txt
res/.ipynb_checkpoints/: Graph-checkpoint.ipynb  Untitled-checkpoint.ipynb
src/: CMakeLists.txt  Constants.h  ExcitatoryNeuron.cpp  ExcitatoryNeuron.h  InhibitoryNeuron.cpp  InhibitoryNeuron.h  Network.cpp  Network.h  Neuron.cpp  Neuron.h  Simulation.cpp  Simulation.h  constants.h  main.cpp  network.cpp  network.h  neuron.cpp  neuron.h  simulation.cpp  simulation.h
test/: mbPotentialTest.cpp
